--- a/BusTicketReservationSystem(Frontend)/User-Side/cancelTicket.html
+++ b/BusTicketReservationSystem(Frontend)/User-Side/cancelTicket.html
@@ -8,7 +8,7 @@
   <!-- Website External Css Link -->
   <link rel="stylesheet" href="./styles/headerFooter.css">
   <link rel="stylesheet" href="./styles/ticketStatus.css">
-  <title>Home -Book My Bus</title>
+  <title>Cancel Ticket - Book My Bus</title>
 </head>
 <body>
     <!-- Navbar Starts -->
