--- a/BusTicketReservationSystem(Frontend)/User-Side/feedback.html
+++ b/BusTicketReservationSystem(Frontend)/User-Side/feedback.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Feedback</title>
+    <title>Feedback - Book My Bus</title>
     <link rel="stylesheet" href="../User-Side/styles/login.css">
     <link rel="stylesheet" href="./styles/feedback.css">
 
